Fix spacing and add medium icon

--- a/web/stylesheets/landings.css
+++ b/web/stylesheets/landings.css
@@ -7504,7 +7504,7 @@ iframe.c1 {
 }
 
 .pixfort_gym_13 .top_padding {
-    padding-top:60px
+    padding-top:20px
 }
 
 .pixfort_gym_13 .part_st {
